[package]
name = "ultra-json-stable-stringify"
version = "0.1.0"
authors = ["BlackGlory <woshenmedoubuzhidao@blackglory.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde_json = { version = "1.0.137", features = ["preserve_order"] }
serde-wasm-bindgen = "0.6.5"
gloo-utils = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = "s"
lto = true
